Assertion failure: isSome(), at obj-sparc64-sun-solaris2.11/dist/include/mozilla/Maybe.h:753
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr102 | --- | unaffected |
firefox113 | --- | unaffected |
firefox114 | --- | fixed |
firefox115 | --- | fixed |
People
(Reporter: petr.sumbera, Assigned: stransky)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
48 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
Steps to reproduce:
Fairfox hits a assetion during startup on Solaris SPARC.
Assertion failure: isSome(), at /builds2/psumbera/mozilla-central-build/obj-sparc64-sun-solaris2.11/dist/include/mozilla/Maybe.h:753
[Child 1215, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80004005 (NS_ERROR_FAILURE): file /builds2/psumbera/mozilla-central-build/toolkit/xre/nsXREDirProvider.cpp:475
#01: mozilla::Maybe<bool>::value() const &[/opt/INSTALLED/lib/firefox/libxul.so +0x14af2128]
#02: mozilla::widget::GfxInfo::GetFeatureStatusImpl(int, int*, nsTSubstring<char16_t>&, nsTArray<mozilla::widget::GfxDriverInfo> const&, nsTSubstring<char>&, mozilla::widget::OperatingSystem*)[/opt/INSTALLED/lib/firefox/libxul.so +0x1b4adee8]
#03: mozilla::widget::GfxInfoBase::GetFeatureStatus(int, nsTSubstring<char>&, int*)[/opt/INSTALLED/lib/firefox/libxul.so +0x1b33d7e0]
#04: mozilla::widget::GfxInfoBase::GetAllFeatures()[/opt/INSTALLED/lib/firefox/libxul.so +0x1b33d9d8]
#05: mozilla::dom::ContentParent::InitInternal(mozilla::hal::ProcessPriority)[/opt/INSTALLED/lib/firefox/libxul.so +0x1a36a2f4]
#06: mozilla::dom::ContentParent::LaunchSubprocessResolve(bool, mozilla::hal::ProcessPriority)[/opt/INSTALLED/lib/firefox/libxul.so +0x1a3674ac]
#07: mozilla::dom::ContentParent::WaitForLaunchSync(mozilla::hal::ProcessPriority)[/opt/INSTALLED/lib/firefox/libxul.so +0x1a35ec0c]
#08: mozilla::dom::ContentParent::GetNewOrUsedBrowserProcess(nsTSubstring<char> const&, mozilla::dom::BrowsingContextGroup*, mozilla::hal::ProcessPriority, bool)[/opt/INSTALLED/lib/firefox/libxul.so +0x1a35e428]
#09: mozilla::dom::ContentParent::CreateBrowser(mozilla::dom::TabContext const&, mozilla::dom::Element*, nsTSubstring<char> const&, mozilla::dom::BrowsingContext*, mozilla::dom::ContentParent*)[/opt/INSTALLED/lib/firefox/libxul.so +0x1a360780]
#10: nsFrameLoader::TryRemoteBrowserInternal()[/opt/INSTALLED/lib/firefox/libxul.so +0x15def28c]
#11: nsFrameLoader::TryRemoteBrowser()[/opt/INSTALLED/lib/firefox/libxul.so +0x15defb44]
#12: nsFrameLoader::EnsureRemoteBrowser()[/opt/INSTALLED/lib/firefox/libxul.so +0x15dedf60]
#13: nsFrameLoader::ShowRemoteFrame(mozilla::gfx::IntSizeTyped<mozilla::ScreenPixel> const&, nsSubDocumentFrame*)[/opt/INSTALLED/lib/firefox/libxul.so +0x15de4d6c]
#14: nsFrameLoader::Show(nsSubDocumentFrame*)[/opt/INSTALLED/lib/firefox/libxul.so +0x15de4240]
#15: nsSubDocumentFrame::ShowViewer()[/opt/INSTALLED/lib/firefox/libxul.so +0x1bef6d6c]
#16: AsyncFrameInit::Run()[/opt/INSTALLED/lib/firefox/libxul.so +0x1bf40ca0]
#17: nsContentUtils::RemoveScriptBlocker()[/opt/INSTALLED/lib/firefox/libxul.so +0x1574006c]
#18: nsAutoScriptBlocker::~nsAutoScriptBlocker()[/opt/INSTALLED/lib/firefox/libxul.so +0x14888d90]
#19: mozilla::PresShell::DoFlushPendingNotifications(mozilla::ChangesToFlush)[/opt/INSTALLED/lib/firefox/libxul.so +0x1bab10c8]
#20: mozilla::PresShell::FlushPendingNotifications(mozilla::ChangesToFlush)[/opt/INSTALLED/lib/firefox/libxul.so +0x157beb04]
#21: mozilla::dom::Document::FlushPendingNotifications(mozilla::ChangesToFlush)[/opt/INSTALLED/lib/firefox/libxul.so +0x15a8117c]
#22: mozilla::dom::Document::FlushPendingNotifications(mozilla::FlushType)[/opt/INSTALLED/lib/firefox/libxul.so +0x15a80c88]
#23: nsFrameLoader::TryRemoteBrowserInternal()[/opt/INSTALLED/lib/firefox/libxul.so +0x15dee458]
#24: nsFrameLoader::TryRemoteBrowser()[/opt/INSTALLED/lib/firefox/libxul.so +0x15defb44]
#25: nsFrameLoader::EnsureRemoteBrowser()[/opt/INSTALLED/lib/firefox/libxul.so +0x15dedf60]
#26: nsFrameLoader::ReallyStartLoadingInternal()[/opt/INSTALLED/lib/firefox/libxul.so +0x15de2968]
#27: nsFrameLoader::ReallyStartLoading()[/opt/INSTALLED/lib/firefox/libxul.so +0x15de213c]
#28: mozilla::dom::Document::MaybeInitializeFinalizeFrameLoaders()[/opt/INSTALLED/lib/firefox/libxul.so +0x15a783bc]
#29: _ZZN7mozilla6detail23RunnableMethodArgumentsIJEE5applyINS_3dom8DocumentEMS5_FvvEEEDcPT_T0_ENKUlDpOT_E_clIJEEEDaSD_[/opt/INSTALLED/lib/firefox/libxul.so +0x15bbffd4]
#30: _ZSt13__invoke_implIvZN7mozilla6detail23RunnableMethodArgumentsIJEE5applyINS0_3dom8DocumentEMS6_FvvEEEDcPT_T0_EUlDpOT_E_JEES9_St14__invoke_otherOSB_DpOT1_[/opt/INSTALLED/lib/firefox/libxul.so +0x15bc3ec0]
#31: _ZSt8__invokeIZN7mozilla6detail23RunnableMethodArgumentsIJEE5applyINS0_3dom8DocumentEMS6_FvvEEEDcPT_T0_EUlDpOT_E_JEENSt15__invoke_resultIS9_JDpT0_EE4typeEOS9_DpOSH_[/opt/INSTALLED/lib/firefox/libxul.so +0x15bc365c]
#32: _ZSt12__apply_implIZN7mozilla6detail23RunnableMethodArgumentsIJEE5applyINS0_3dom8DocumentEMS6_FvvEEEDcPT_T0_EUlDpOT_E_RSt5tupleIJEEJEEDcOS9_OSB_St16integer_sequenceImJXspT1_EEE[/opt/INSTALLED/lib/firefox/libxul.so +0x15bc0020]
#33: _ZSt5applyIZN7mozilla6detail23RunnableMethodArgumentsIJEE5applyINS0_3dom8DocumentEMS6_FvvEEEDcPT_T0_EUlDpOT_E_RSt5tupleIJEEEDcOS9_OSB_[/opt/INSTALLED/lib/firefox/libxul.so +0x15bc0078]
#34: decltype(auto) mozilla::detail::RunnableMethodArguments<>::apply<mozilla::dom::Document, void (mozilla::dom::Document::*)()>(mozilla::dom::Document*, void (mozilla::dom::Document::*)())[/opt/INSTALLED/lib/firefox/libxul.so +0x15bc00fc]
#35: mozilla::detail::RunnableMethodImpl<mozilla::dom::Document*, void (mozilla::dom::Document::*)(), true, (mozilla::RunnableKind)0>::Run()[/opt/INSTALLED/lib/firefox/libxul.so +0x15bc035c]
#36: nsContentUtils::RemoveScriptBlocker()[/opt/INSTALLED/lib/firefox/libxul.so +0x1574006c]
#37: mozilla::dom::Document::EndUpdate()[/opt/INSTALLED/lib/firefox/libxul.so +0x15a6f89c]
#38: mozAutoDocUpdate::~mozAutoDocUpdate()[/opt/INSTALLED/lib/firefox/libxul.so +0x156beb4c]
#39: nsINode::ReplaceOrInsertBefore(bool, nsINode*, nsINode*, mozilla::ErrorResult&)[/opt/INSTALLED/lib/firefox/libxul.so +0x15e1345c]
#40: nsINode::InsertBefore(nsINode&, nsINode*, mozilla::ErrorResult&)[/opt/INSTALLED/lib/firefox/libxul.so +0x15768760]
#41: nsINode::AppendChild(nsINode&, mozilla::ErrorResult&)[/opt/INSTALLED/lib/firefox/libxul.so +0x15768798]
#42: mozilla::dom::Node_Binding::appendChild(JSContext*, JS::Handle<JSObject*>, void*, JSJitMethodCallArgs const&)[/opt/INSTALLED/lib/firefox/libxul.so +0x165ab1d8]
#43: bool mozilla::dom::binding_detail::GenericMethod<mozilla::dom::binding_detail::NormalThisPolicy, mozilla::dom::binding_detail::ThrowExceptions>(JSContext*, unsigned int, JS::Value*)[/opt/INSTALLED/lib/firefox/libxul.so +0x17976258]
#44: CallJSNative(JSContext*, bool (*)(JSContext*, unsigned int, JS::Value*), js::CallReason, JS::CallArgs const&)[/opt/INSTALLED/lib/firefox/libxul.so +0x2086ab90]
#45: js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason)[/opt/INSTALLED/lib/firefox/libxul.so +0x2083e440]
#46: InternalCall(JSContext*, js::AnyInvokeArgs const&, js::CallReason)[/opt/INSTALLED/lib/firefox/libxul.so +0x2083ebd0]
#47: js::CallFromStack(JSContext*, JS::CallArgs const&, js::CallReason)[/opt/INSTALLED/lib/firefox/libxul.so +0x2083ec48]
#48: js::Interpret(JSContext*, js::RunState&)[/opt/INSTALLED/lib/firefox/libxul.so +0x20853554]
#49: MaybeEnterInterpreterTrampoline(JSContext*, js::RunState&)[/opt/INSTALLED/lib/firefox/libxul.so +0x2083d624]
#50: js::RunScript(JSContext*, js::RunState&)[/opt/INSTALLED/lib/firefox/libxul.so +0x2083dc9c]
#51: js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason)[/opt/INSTALLED/lib/firefox/libxul.so +0x2083e6b4]
#52: InternalCall(JSContext*, js::AnyInvokeArgs const&, js::CallReason)[/opt/INSTALLED/lib/firefox/libxul.so +0x2083ebd0]
#53: js::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, js::AnyInvokeArgs const&, JS::MutableHandle<JS::Value>, js::CallReason)[/opt/INSTALLED/lib/firefox/libxul.so +0x2083ee7c]
#54: js::CallSelfHostedFunction(JSContext*, JS::Handle<js::PropertyName*>, JS::Handle<JS::Value>, js::AnyInvokeArgs const&, JS::MutableHandle<JS::Value>)[/opt/INSTALLED/lib/firefox/libxul.so +0x1f3084ac]
#55: AsyncFunctionResume(JSContext*, JS::Handle<js::AsyncFunctionGeneratorObject*>, ResumeKind, JS::Handle<JS::Value>)[/opt/INSTALLED/lib/firefox/libxul.so +0x1ee4ce1c]
#56: js::AsyncFunctionAwaitedFulfilled(JSContext*, JS::Handle<js::AsyncFunctionGeneratorObject*>, JS::Handle<JS::Value>)[/opt/INSTALLED/lib/firefox/libxul.so +0x1ee4d358]
#57: AsyncFunctionPromiseReactionJob(JSContext*, JS::Handle<PromiseReactionRecord*>)[/opt/INSTALLED/lib/firefox/libxul.so +0x1f1e75e4]
#58: PromiseReactionJob(JSContext*, unsigned int, JS::Value*)[/opt/INSTALLED/lib/firefox/libxul.so +0x1f1e7b9c]
#59: CallJSNative(JSContext*, bool (*)(JSContext*, unsigned int, JS::Value*), js::CallReason, JS::CallArgs const&)[/opt/INSTALLED/lib/firefox/libxul.so +0x2086ab90]
#60: js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason)[/opt/INSTALLED/lib/firefox/libxul.so +0x2083e440]
#61: InternalCall(JSContext*, js::AnyInvokeArgs const&, js::CallReason)[/opt/INSTALLED/lib/firefox/libxul.so +0x2083ebd0]
#62: js::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, js::AnyInvokeArgs const&, JS::MutableHandle<JS::Value>, js::CallReason)[/opt/INSTALLED/lib/firefox/libxul.so +0x2083ee7c]
#63: JS::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::HandleValueArray const&, JS::MutableHandle<JS::Value>)[/opt/INSTALLED/lib/firefox/libxul.so +0x1eea24fc]
#64: mozilla::dom::PromiseJobCallback::Call(mozilla::dom::BindingCallContext&, JS::Handle<JS::Value>, mozilla::ErrorResult&)[/opt/INSTALLED/lib/firefox/libxul.so +0x16798c9c]
#65: mozilla::dom::PromiseJobCallback::Call(mozilla::ErrorResult&, char const*, mozilla::dom::CallbackObject::ExceptionHandling, JS::Realm*)[/opt/INSTALLED/lib/firefox/libxul.so +0x12cf729c]
#66: mozilla::dom::PromiseJobCallback::Call(char const*)[/opt/INSTALLED/lib/firefox/libxul.so +0x12cf737c]
#67: mozilla::PromiseJobRunnable::Run(mozilla::AutoSlowOperation&)[/opt/INSTALLED/lib/firefox/libxul.so +0x12d0d828]
#68: mozilla::CycleCollectedJSContext::PerformMicroTaskCheckPoint(bool)[/opt/INSTALLED/lib/firefox/libxul.so +0x12cd490c]
#69: mozilla::CycleCollectedJSContext::LeaveMicroTask()[/opt/INSTALLED/lib/firefox/libxul.so +0x12fe2450]
#70: mozilla::nsAutoMicroTask::~nsAutoMicroTask()[/opt/INSTALLED/lib/firefox/libxul.so +0x12fe24c0]
#71: mozilla::EventListenerManager::HandleEventSubType(mozilla::EventListenerManager::Listener*, mozilla::dom::Event*, mozilla::dom::EventTarget*)[/opt/INSTALLED/lib/firefox/libxul.so +0x1854d194]
#72: mozilla::EventListenerManager::HandleEventInternal(nsPresContext*, mozilla::WidgetEvent*, mozilla::dom::Event**, mozilla::dom::EventTarget*, nsEventStatus*, bool)[/opt/INSTALLED/lib/firefox/libxul.so +0x1854de30]
#73: mozilla::EventListenerManager::HandleEvent(nsPresContext*, mozilla::WidgetEvent*, mozilla::dom::Event**, mozilla::dom::EventTarget*, nsEventStatus*, bool)[/opt/INSTALLED/lib/firefox/libxul.so +0x1858a6e8]
#74: mozilla::EventTargetChainItem::HandleEvent(mozilla::EventChainPostVisitor&, mozilla::ELMCreationDetector&)[/opt/INSTALLED/lib/firefox/libxul.so +0x1858dfe8]
#75: mozilla::EventTargetChainItem::HandleEventTargetChain(nsTArray<mozilla::EventTargetChainItem>&, mozilla::EventChainPostVisitor&, mozilla::EventDispatchingCallback*, mozilla::ELMCreationDetector&)[/opt/INSTALLED/lib/firefox/libxul.so +0x18540310]
#76: mozilla::EventDispatcher::Dispatch(nsISupports*, nsPresContext*, mozilla::WidgetEvent*, mozilla::dom::Event*, nsEventStatus*, mozilla::EventDispatchingCallback*, nsTArray<mozilla::dom::EventTarget*>*)[/opt/INSTALLED/lib/firefox/libxul.so +0x18543224]
#77: nsDocumentViewer::LoadComplete(nsresult)[/opt/INSTALLED/lib/firefox/libxul.so +0x1bb83124]
#78: nsDocShell::EndPageLoad(nsIWebProgress*, nsIChannel*, nsresult)[/opt/INSTALLED/lib/firefox/libxul.so +0x1dbe92a4]
#79: nsDocShell::OnStateChange(nsIWebProgress*, nsIRequest*, unsigned int, nsresult)[/opt/INSTALLED/lib/firefox/libxul.so +0x1dbe5a98]
#80: nsDocLoader::DoFireOnStateChange(nsIWebProgress*, nsIRequest*, int&, nsresult)[/opt/INSTALLED/lib/firefox/libxul.so +0x146697c0]
#81: nsDocLoader::doStopDocumentLoad(nsIRequest*, nsresult)[/opt/INSTALLED/lib/firefox/libxul.so +0x14667870]
#82: nsDocLoader::DocLoaderIsEmpty(bool, mozilla::Maybe<nsresult> const&)[/opt/INSTALLED/lib/firefox/libxul.so +0x146668a4]
#83: nsDocLoader::OnStopRequest(nsIRequest*, nsresult)[/opt/INSTALLED/lib/firefox/libxul.so +0x14666034]
#84: nsDocShell::OnStopRequest(nsIRequest*, nsresult)[/opt/INSTALLED/lib/firefox/libxul.so +0x1dc1b2c0]
#85: mozilla::net::nsLoadGroup::NotifyRemovalObservers(nsIRequest*, nsresult)[/opt/INSTALLED/lib/firefox/libxul.so +0x1347c7b4]
#86: mozilla::net::nsLoadGroup::RemoveRequest(nsIRequest*, nsISupports*, nsresult)[/opt/INSTALLED/lib/firefox/libxul.so +0x1347bd70]
#87: nsJARChannel::OnStopRequest(nsIRequest*, nsresult)[/opt/INSTALLED/lib/firefox/libxul.so +0x14570b80]
#88: nsInputStreamPump::OnStateStop()[/opt/INSTALLED/lib/firefox/libxul.so +0x13477b78]
#89: nsInputStreamPump::OnInputStreamReady(nsIAsyncInputStream*)[/opt/INSTALLED/lib/firefox/libxul.so +0x13475fcc]
#90: CallbackHolder::CallbackHolder(nsIAsyncInputStream*, nsIInputStreamCallback*, unsigned int, nsIEventTarget*)::{lambda()#1}::operator()() const[/opt/INSTALLED/lib/firefox/libxul.so +0x12ec2950]
#91: NS_NewCancelableRunnableFunction<CallbackHolder::CallbackHolder(nsIAsyncInputStream*, nsIInputStreamCallback*, unsigned int, nsIEventTarget*)::{lambda()#1}>(char const*, CallbackHolder::CallbackHolder(nsIAsyncInputStream*, nsIInputStreamCallback*, unsigne[/opt/INSTALLED/lib/firefox/libxul.so +0x12ecb7b4]
#92: mozilla::RunnableTask::Run()[/opt/INSTALLED/lib/firefox/libxul.so +0x12f89740]
#93: mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&)[/opt/INSTALLED/lib/firefox/libxul.so +0x12f7cb9c]
#94: mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&)[/opt/INSTALLED/lib/firefox/libxul.so +0x12f7bc24]
#95: mozilla::TaskController::ProcessPendingMTTask(bool)[/opt/INSTALLED/lib/firefox/libxul.so +0x12f7ab98]
#96: mozilla::TaskController::TaskController()::{lambda()#1}::operator()() const[/opt/INSTALLED/lib/firefox/libxul.so +0x12f790e4]
#97: mozilla::detail::RunnableFunction<mozilla::TaskController::TaskController()::{lambda()#1}>::Run()[/opt/INSTALLED/lib/firefox/libxul.so +0x12f82178]
#98: nsThread::ProcessNextEvent(bool, bool*)[/opt/INSTALLED/lib/firefox/libxul.so +0x12fbafb4]
#99: NS_ProcessNextEvent(nsIThread*, bool)[/opt/INSTALLED/lib/firefox/libxul.so +0x12fcbb34]
#100: mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*)[/opt/INSTALLED/lib/firefox/libxul.so +0x1413af50]
#101: MessageLoop::RunInternal()[/opt/INSTALLED/lib/firefox/libxul.so +0x140118ac]
#102: MessageLoop::RunHandler()[/opt/INSTALLED/lib/firefox/libxul.so +0x140117d4]
#103: MessageLoop::Run()[/opt/INSTALLED/lib/firefox/libxul.so +0x14011778]
#104: nsBaseAppShell::Run()[/opt/INSTALLED/lib/firefox/libxul.so +0x1b3d9344]
#105: nsAppStartup::Run()[/opt/INSTALLED/lib/firefox/libxul.so +0x1e8128b8]
#106: XREMain::XRE_mainRun()[/opt/INSTALLED/lib/firefox/libxul.so +0x1eabc228]
#107: XREMain::XRE_main(int, char**, mozilla::BootstrapConfig const&)[/opt/INSTALLED/lib/firefox/libxul.so +0x1eabd4dc]
#108: XRE_main(int, char**, mozilla::BootstrapConfig const&)[/opt/INSTALLED/lib/firefox/libxul.so +0x1eabd7c4]
#109: mozilla::BootstrapImpl::XRE_main(int, char**, mozilla::BootstrapConfig const&)[/opt/INSTALLED/lib/firefox/libxul.so +0x1eae5bb4]
#110: do_main(int, char**, char**)[/opt/INSTALLED/lib/firefox/firefox +0x82754]
#111: main[/opt/INSTALLED/lib/firefox/firefox +0x82db4]
#112: _start[/opt/INSTALLED/lib/firefox/firefox +0x812cc]
Reporter | ||
Comment 1•2 years ago
|
||
Plus I see the same on Solaris x86.
Reporter | ||
Updated•1 years ago
|
Comment 2•1 years ago
|
||
:stransky, since you are the author of the regressor, bug 1787182, could you take a look?
For more information, please visit BugBot documentation.
Assignee | ||
Comment 3•1 years ago
|
||
Updated•1 years ago
|
Comment 4•1 years ago
|
||
Set release status flags based on info from the regressing bug 1787182
Assignee | ||
Updated•1 years ago
|
Comment 6•1 years ago
|
||
bugherder |
Comment 7•1 years ago
|
||
The patch landed in nightly and beta is affected.
:stransky, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox114
towontfix
.
For more information, please visit BugBot documentation.
Assignee | ||
Comment 8•1 years ago
|
||
Comment on attachment 9332603 [details]
Bug 1831541 [Linux] Don't assert on mIsVAAPISupported if MOZ_WAYLAND is missing r?emilio
Beta/Release Uplift Approval Request
- User impact if declined: Assertion/crash on builds without Wayland support.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Simple build fix.
- String changes made/needed:
- Is Android affected?: No
Comment 9•1 years ago
|
||
Comment on attachment 9332603 [details]
Bug 1831541 [Linux] Don't assert on mIsVAAPISupported if MOZ_WAYLAND is missing r?emilio
Approved for 114 beta 3, thanks.
Comment 10•1 years ago
|
||
bugherder uplift |
Comment 11•1 years ago
|
||
Fwiw, i've also experimented crashes at startup on OpenBSD (eg no wayland) with 114b1 & b2 on two laptops with gfx accel enabled by default, but the same betas were working fine on an old desktop with an RV620 and gfx accel disabled in the profile.
114b3 works just fine with gfx accel enabled.
Updated•1 years ago
|
Description
•