Bug 1831541 [Linux] Don't assert on mIsVAAPISupported if MOZ_WAYLAND is missing r=emilio a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D177620